- fixed wrong solving status (OPTIMAL) in case an unbounded solution was provided or found by heuristic before presolve
- fixed wrong basis rstat values in CPLEX LPI
- fixed bug leading to removing a ranged row parallel to the objective function, although one of the sides was still needed
- fixed a bug correcting the binvarssorted flag in cons_linear.c

performance improvements:
- also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()

features:
- added delayed cutpool which only get separated if the sepastore is empty after a separation round

interface
- fixed spelling in the method name SCIPgmlWriteClosing()

SCIP version 3.0.0
==================

datastructure:
- new data structure for binary trees (SCIP_BT and SCIP_BTNODE in pub_misc.h)
- renamed data structure SCIP_STAIRMAP to SCIP_PROFILE
- renamed data structure SPARSESOLUTION to SCIP_SPARSESOL and moved it from cons_countsols.h to struct_misc.h

interface
- new method SCIPisConflictAnalysisApplicable() which return FALSE is the conflict will not runs; can be used
  to avoid unnecessary initialization of the conflict analysis
- the methods SCIPsortedvecInsert*() have an additional parameter which can be used to receive the position where
  the new element was inserted, if this is not of interest a NULL pointer can be given
- SCIPcolGetStrongbranchLPAge(), SCIPgetVarStrongbranchLPAge(), SCIPgetNLPs(), SCIPgetNPrimalLPs(), SCIPgetNDualLPs(),
  SCIPgetNBarrierLPs(), SCIPgetNResolveLPs(), SCIPgetNPrimalResolveLPs(), SCIPgetNDualResolveLPs(), SCIPgetNNodeLPs(),
  SCIPgetNNodeInitLPs(), SCIPgetNDivingLPs(), SCIPgetNStrongbranchs(), SCIPgetNRootStrongbranchs() now return a longint
  instead of an integer
- added propagation timing as parameter "proptiming" to SCIP_DECL_CONSPROP() and SCIP_DECL_PROPEXEC() as well as to
  the corresponding C++ wrapper classes
- new method SCIPpropIsPresolDelayed() which return if a propagator is delay during presolving